--- a/public/index.html
+++ b/public/index.html
@@ -15,15 +15,15 @@
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" data-rocket-async="style" as="style" onload="this.onload=null;this.rel='stylesheet'" >
     <!-- OGP -->
-    <meta property="og:url" content="https://yu-kobo.net"/>
+    <meta property="og:url" content="https://toraripi-crud.web.app/"/>
     <meta property="og:title" content="トラリピ資金管理表"/>
     <meta property="og:type" content="website">
-    <meta property="og:description" content="ロスカット値を決めましょう。ロスカットされないための必要資金がわかります。" />
-    <meta property="og:image" content="https://yu-kobo.net/thumbnail.jpg" />
+    <meta property="og:description" content="ロスカット値から必要な資金を計算します。Googleでログインしてデータを保存しよう。" />
+    <meta property="og:image" content="https://toraripi-crud.web.app//thumbnail.jpg" />
     <!-- ※Twitter共通設定 -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@cotton11aq" />
-    <meta name="twitter:image" content="https://yu-kobo.net/thumbnail.jpg">
+    <meta name="twitter:image" content="https://toraripi-crud.web.app//thumbnail.jpg">
     <title>トラリピ資金管理表</title>
   </head>
   <body>
